# F20DP_CWK2_SYCL

./: a.out  totient.c
Array/: CMakeLists.txt  array.cpp
Python/: SYCLData.csv  SYCLPlots.py
Reduction/: CMakeLists.txt  reduction.cpp
